# L10nHook

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  buildNinja.bat  buildVS2026_X64Prj.bat  buildVS2026_X86Prj.bat  readme.md
common/: CMakeLists.txt
common/include/: AddressResolver.h  DetoursHook.h  Encoding.h  Logger.h  ModuleUtils.h  QStringBridge.h  StringUtils.h  TranslationManager.h
common/src/: AddressResolver.cpp  DetoursHook.cpp  Encoding.cpp  Logger.cpp  ModuleUtils.cpp  QStringBridge.cpp  StringUtils.cpp  TranslationManager.cpp
hooks/: CMakeLists.txt
hooks/ida/: CMakeLists.txt  Hook.cpp  Hook.h  dllmain.cpp
hooks/ida/Dictionaries/: translations.txt
proxy/: version_x64.cpp  version_x86.cpp  winmm_x64.cpp  winmm_x86.cpp
